Install routine: Fix text contrast for accessibility
Fixes #17785.

--- a/plugins/Installation/stylesheets/installation.css
+++ b/plugins/Installation/stylesheets/installation.css
@@ -81,7 +81,7 @@ h3 {
     margin-bottom: 15px;
 }
 .content p {
-    color: #858585;
+    color: #757575;
     margin-bottom: 10px;
 }
 p.next-step {
